# ChangeLog for Gentoo Linux Installer
# Copyright 2004 Gentoo Technologies, Inc.
# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.88 2005/03/19 09:10:57 agaffney Exp $

*GLI-0.01 (9 Feb 2004)

  19 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Fixed a couple bugs in add_netmount() in GLIInstallProfile.

  18 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Add sigunmask.c contributed by d_m (on freenode) to counteract python's
  retarted behavior regarding threads and signals. Add code to convert MB/%/*
  to start/end sectors

  17 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Add 2>&1 to cmd in spawn()

  16 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Modified GLIUtility.exitsuccess() to work with return value from
  commands.getstatusoutput instead of os.waitpid(). spawn() automatically
  creates wrapper script for commands run inside chroot so multiple commands
  and redirection can be used. Change exitsuccess() back. Added 'chmod a+x'
  for the generated script from spawn()

  16 Mar 2005; Preston Cody <codeman@gentoo.org>
  Removed default values for stage tarball URI and portage tree URI from
  InstallProfile.  These should be set by the FEs.  also added services step to
  ArchTemplate and coldplug/hotplug runlevels to the genkernel step.
  Possibly fixed CC DHCP bug with -n. (thx agaffney)

  14 Mar 2005; Preston Cody <codeman@gentoo.org>
  Small fix for setting the default gateway.  Also added feature to dialogfe.
  
  7 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Switched spawn() over to commands.getstatusoutput() instead of fork/waitpid

  1 Mar 2005; Preston Cody <codeman@gentoo.org>
  Fixed a bunch of true -> True typos. lots of em
  only write new resolv.conf if there are dns servers listed.
  
  1 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
  Commented out 'display_on_tty8=True' in start_portmap()

  18 Feb 2005; Preston Cody <codeman@gentoo.org>
  added progress bar to dialogfe and fix logger bug in ArchTemplate.
  